--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title> XX_unXpected </title>
     </head>
     <body>
-        <h1 id = "logo"> XXX </h1>
+        <header>
+            <h1 id = "logo"><a href = "./"> XXX </a></h1>
+        </header>
     </body>
 </html>
