css with font-awesome

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <head>
         <meta charset = "utf-8">
         <title> XX_unXpected </title>
+        <link rel="stylesheet" href="page_assets/css/style.css" />
+        <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" />
     </head>
     <body>
         <header>
             <h1 id = "logo"><a href = "./"> XXX </a></h1>
         </header>
+
+        <footer id="footer">
+                <ul class="menu">
+                    <li>Copyright&copy; Min-wook. All rights Reserved.</li>
+                </ul>
+        
+        </footer>
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     </body>
 </html>
