--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <header>
-            <h1 id = "logo"><a href = "./"> XXX </a></h1>
+            <!-- 홈 로고 설정 -->
+            <h1 id = "logo"><a href = "index.html" title = "home"> XXX </a></h1>
         </header>
 
         <footer id="footer">
