--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset = "utf-8">
         <title> XX_unXpected </title>
+        <link rel="SHORTCUT ICON" href="./images/logo/XXX-logo.ico" />
+	    <link rel="icon" href="./images/logo/XXX-logo.ico" type="image/ico" />
         <link rel="stylesheet" href="page_assets/css/style.css" />
         <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" />
     </head>
