--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
         <title> XX_unXpected </title>
         <link rel="SHORTCUT ICON" href="./images/logo/XXX-logo.ico" />
 	    <link rel="icon" href="./images/logo/XXX-logo.ico" type="image/ico" />
-        <link rel="stylesheet" href="page_assets/css/style.css" />
+        <link rel="stylesheet" href="./page_assets/css/style.css" />
         <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" />
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="./page_assets/js/main.js"></script>
+
     </head>
     <body>
         <header>
@@ -21,7 +25,5 @@
                 </ul>
         
         </footer>
-
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     </body>
 </html>
