--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset = "utf-8">
         <title> XX_unXpected </title>
-        <link rel="SHORTCUT ICON" href="./images/logo/XXX-logo.ico" />
-	    <link rel="icon" href="./images/logo/XXX-logo.ico" type="image/ico" />
+        <link rel="SHORTCUT ICON" href="./images/main/XXX_logo.ico" />
+	    <link rel="icon" href="./images/main/XXX_logo.ico" type="image/ico" />
         <link rel="stylesheet" href="./page_assets/css/style.css" />
         <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" />
 
@@ -14,14 +14,22 @@
 
     </head>
     <body>
-        <header>
+        <header id = "header">
             <!-- 홈 로고 설정 -->
             <h1 id = "logo"><a href = "index.html" title = "home"> XXX </a></h1>
         </header>
 
+        <section id = "XXX_image" class = "main style1 dark fullscreen">
+            <img src = "./images/main/main_img.jpeg" width = "1200" height = "500" title = "XXX_Main">
+        </section>
+
+        <section>
+
+        </section>
+
         <footer id="footer">
                 <ul class="menu">
-                    <li>Copyright&copy; Min-wook. All rights Reserved.</li>
+                    <li>Copyright&copy; XXX All rights Reserved.</li>
                 </ul>
         
         </footer>
