--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
         <meta charset = "utf-8">
         <title> XX_unXpected </title>
         <link rel="SHORTCUT ICON" href="./images/main/XXX_logo.ico" />
-	    <link rel="icon" href="./images/main/XXX_logo.ico" type="image/ico" />
+	    <link rel="icon" href="./images/main/XXX-logo.ico" type="image/ico" />
         <link rel="stylesheet" href="./page_assets/css/style.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="./page_assets/js/main.js"></script>
-
     </head>
+
+    <!-- body -->
     <body>
         <header id = "header">
             <!-- 홈 로고 설정 -->
             <h1 id = "logo"><a href = "index.html" title = "home"> XXX </a></h1>
+            <span id = "menu"><img src = "./images/main/main-menu.png"></span>
         </header>
 
         <section id = "XXX_image" class = "main style1 dark fullscreen">
-            <img src = "./images/main/main_img.jpeg" width = "1200" height = "500" title = "XXX_Main">
+            <img src = "./images/main/main-img.jpeg" width = "1200" height = "500" title = "XXX_Main">
         </section>
 
         <div id="contact-icons">
@@ -32,8 +34,9 @@
             </ul>
         </div>
 
+        <!-- footer -->
         <footer id="footer">                
-            <nav class="menu">
+            <nav class="copyright">
                 <ul>
                     <li>Copyright&copy; XXX All rights Reserved.</li>
                 </ul>
