--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <head>
         <meta charset = "utf-8">
         <title> XX_unXpected </title>
+        <link rel="stylesheet" href="./page_assets/css/style.css" />
         <link rel="SHORTCUT ICON" href="./images/main/XXX_logo.ico" />
 	    <link rel="icon" href="./images/main/XXX-logo.ico" type="image/ico" />
-        <link rel="stylesheet" href="./page_assets/css/style.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="./page_assets/js/main.js"></script>
@@ -42,6 +44,13 @@
                 </ul>
             </nav>
         </footer>
-        
+
+        <!-- scripts -->
+    	<script src="./assets/js/jquery.poptrox.min.js"></script>
+	    <script src="./assets/js/jquery.scrolly.min.js"></script>
+    	<script src="./assets/js/jquery.scrollex.min.js"></script>
+    	<script src="./assets/js/skel.min.js"></script>
+    	<script src="./assets/js/util.js"></script>
+    	<script src="./assets/js/main.js"></script>
     </body>
 </html>
