setting anchor and layouts

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <head>
         <meta charset = "utf-8">
         <title> XX_unXpected </title>
-        <link rel="stylesheet" href="./page_assets/css/style.css" />
-        <link rel="SHORTCUT ICON" href="./images/main/XXX_logo.ico" />
+        <link rel="stylesheet" href="./page-assets/css/style.css" />
+        <link rel="SHORTCUT ICON" href="./images/main/XXX-logo.ico" />
 	    <link rel="icon" href="./images/main/XXX-logo.ico" type="image/ico" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="./page_assets/js/main.js"></script>
+        <script src="./page-assets/js/main.js"></script>
     </head>
 
     <!-- body -->
@@ -20,12 +18,12 @@
         <header id = "header">
             <!-- 홈 로고 설정 -->
             <h1 id = "logo"><a href = "index.html" title = "home"> XXX </a></h1>
-            <span id = "menu"><img src = "./images/main/main-menu.png"></span>
+            <a href = "https://www.naver.com/" class = "menuLink"><img src = "./images/main/main-menu.png"></a>
         </header>
 
-        <section id = "XXX_image" class = "main style1 dark fullscreen">
-            <img src = "./images/main/main-img.jpeg" width = "1200" height = "500" title = "XXX_Main">
-        </section>
+        <div id = "XXX_image" class = "main style1 dark fullscreen">
+            <img src = "./images/main/main-img.jpeg" title = "XXX_Main">
+        </div>
 
         <div id="contact-icons">
             <!-- 하단 링크 설정 -->
@@ -35,6 +33,7 @@
                 <span><i class="fa fa-envelope-o" aria-hidden="true"></i><a class = "contactlink" href = "#"> E-mail</a></span>
             </ul>
         </div>
+
 
         <!-- footer -->
         <footer id="footer">                
@@ -46,11 +45,11 @@
         </footer>
 
         <!-- scripts -->
-    	<script src="./assets/js/jquery.poptrox.min.js"></script>
-	    <script src="./assets/js/jquery.scrolly.min.js"></script>
-    	<script src="./assets/js/jquery.scrollex.min.js"></script>
-    	<script src="./assets/js/skel.min.js"></script>
-    	<script src="./assets/js/util.js"></script>
-    	<script src="./assets/js/main.js"></script>
+    	<script src="./page-assets/js/jquery.poptrox.min.js"></script>
+	    <script src="./page-assets/js/jquery.scrolly.min.js"></script>
+    	<script src="./page-assets/js/jquery.scrollex.min.js"></script>
+    	<script src="./page-assets/js/skel.min.js"></script>
+    	<script src="./page-assets/js/util.js"></script>
+    	<script src="./page-assets/js/main.js"></script>
     </body>
 </html>
