--- a/index.html
+++ b/index.html
@@ -15,41 +15,47 @@
         <header id = "header">
             <!-- 홈 로고 설정 -->
             <h1 id = "logo"><a href = "index.html" title = "home"> XXX </a></h1>
+    
+        <div id ="main-page">
             <a href = "#overlay_t" class = "triggerMenu"><img src = "./images/main/main-menu.png"></a>
-        </header>
 
-        <div id = "XXX_image" class = "main style1 dark fullscreen">
-            <img src = "./images/main/main-img.jpeg" title = "XXX_Main">
-        </div>
+            <div id = "XXX_image" class = "main style1 dark fullscreen">
+                <img src = "./images/main/main-img.jpeg" title = "XXX_Main">
+            </div>
 
-        <div id="overlay_t"></div> 
-        <div id="popup_layer">
-            <ul class = "popup_list" type ="none">
-                <li><a class ="list_select">Login</a></li>
-                <li><a class ="list_select">Shop</a></li>
-                <li><a class ="list_select">Order list</a></li>
-                <li><a class ="list_select">Cart</a></li>
-                <li><a class ="list_select">Favorite</a></li>
-            </ul>
-        </div>
-
-        <div id="contact-icons">
-            <!-- 하단 링크 설정 -->
-            <ul id="float-icons" class="contact">
-                <span><i class="fa fa-facebook-official" aria-hidden="true"></i><a class = "contactlink" href = "https://ko-kr.facebook.com/people/%EB%94%98%EB%94%98%EC%9D%B4/100004035184267"> Facebook</a></span>
-                <span><i class="fa fa-instagram" aria-hidden="true"></i><a class = "contactlink" href = "#"> Instagram</a></span>
-                <span><i class="fa fa-envelope-o" aria-hidden="true"></i><a class = "contactlink" href = "#"> E-mail</a></span>
-            </ul>
-        </div>
-
-        <!-- footer -->
-        <footer id="footer">                
-            <nav class="copyright">
-                <ul>
-                    <li>Copyright&copy; XXX All rights Reserved.</li>
+            <div id="overlay_t">
+                <a href="#" class = "triggerPop"><img src = "./images/main/popup-menu.png"></a>
+            </div>
+            
+            <div id="popup_layer">
+                <ul class = "popup_list" type ="none">
+                    <li><a class ="list_select">Login</a></li>
+                    <li><a class ="list_select">Shop</a></li>
+                    <li><a class ="list_select">Order list</a></li>
+                    <li><a class ="list_select">Cart</a></li>
+                    <li><a class ="list_select">Favorite</a></li>
                 </ul>
-            </nav>
-        </footer>
+            </div>
+
+            <div id="contact-icons">
+                <!-- 하단 링크 설정 -->
+                <ul id="float-icons" class="contact">
+                    <span><i class="fa fa-facebook-official" aria-hidden="true"></i><a class = "contactlink" href = "https://ko-kr.facebook.com/people/%EB%94%98%EB%94%98%EC%9D%B4/100004035184267"> Facebook</a></span>
+                    <span><i class="fa fa-instagram" aria-hidden="true"></i><a class = "contactlink" href = "#"> Instagram</a></span>
+                    <span><i class="fa fa-envelope-o" aria-hidden="true"></i><a class = "contactlink" href = "#"> E-mail</a></span>
+                </ul>
+            </div>
+
+            <!-- footer -->
+            <footer id="footer">                
+                <nav class="copyright">
+                    <ul>
+                        <li>Copyright&copy; XXX All rights Reserved.</li>
+                    </ul>
+                </nav>
+            </footer>
+
+        </div>
 
         <!-- scripts -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
