setting popup icons(trrigger)

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     
         <div id ="main-page">
             <a href = "#overlay_t" class = "triggerMenu"><img src = "./images/main/main-menu.png"></a>
+            <a href="#" class = "triggerPop"><img src = "./images/main/popup-menu.png"></a>
 
             <div id = "XXX_image" class = "main style1 dark fullscreen">
                 <img src = "./images/main/main-img.jpeg" title = "XXX_Main">
             </div>
 
             <div id="overlay_t">
-                <a href="#" class = "triggerPop"><img src = "./images/main/popup-menu.png"></a>
             </div>
-            
+
             <div id="popup_layer">
                 <ul class = "popup_list" type ="none">
                     <li><a class ="list_select">Login</a></li>
                     <li><a class ="list_select">Shop</a></li>
-                    <li><a class ="list_select">Order list</a></li>
+                    <li><a class ="list_select">Order</a></li>
                     <li><a class ="list_select">Cart</a></li>
                     <li><a class ="list_select">Favorite</a></li>
                 </ul>
