--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <body>
         <header id = "header">
             <!-- 홈 로고 설정 -->
-            <h1 id = "logo"><a href = "index.html" title = "home"> XXX </a></h1>
-    
-        <div id ="main-page">
+            <a href = "index.html" class = "home"><img src = "./images/main/XXX-logo.png"></a>
+
+            <!-- 우측 상단 팝업 메뉴 -->
             <a href = "#overlay_t" class = "triggerMenu"><img src = "./images/main/main-menu.png"></a>
             <a href="#" class = "triggerPop"><img src = "./images/main/popup-menu.png"></a>
+        </header>
 
+        <div id ="main-page"> 
             <div id = "XXX_image" class = "main style1 dark fullscreen">
                 <img src = "./images/main/main-img.jpeg" title = "XXX_Main">
             </div>
