--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="popup_layer">
                 <ul class = "popup_list" type ="none">
                     <li><a class ="list_select">Login</a></li>
-                    <li><a class ="list_select">Shop</a></li>
+                    <li><a href = "./shop.html" class ="list_select">Shop</a></li>
                     <li><a class ="list_select">Order</a></li>
                     <li><a class ="list_select">Cart</a></li>
                     <li><a class ="list_select">Favorite</a></li>
