--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div id ="main-page"> 
             <div id = "XXX_image" class = "main style1 dark fullscreen">
-                <img src = "./images/main/main-img.jpeg" title = "XXX_Main">
+                <img src = "./images/main/main-img.jpeg" class = "imgResize" title = "XXX_Main">
             </div>
 
             <div id="overlay_t">
