--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#" class = "triggerPop"><img src = "./images/main/popup-menu.png" class="img-responsive"></a>
         </header>
 
-        <div id ="main-page"> 
+        <div id ="page"> 
             <div class= "container">
                 <div id = "XXX_image" class = "main style1 dark fullscreen">
                         <img src = "./images/main/main-img.jpeg" class="main-img img-responsive">
