--- a/shop.html
+++ b/shop.html
@@ -14,24 +14,19 @@
     <body>
             <header id = "header">
                 <!-- 홈 로고 설정 -->
-                <a href = "index.html" class = "home"><img src = "./images/main/XXX-logo.png"></a>
-        
-                <!-- 우측 상단 팝업 메뉴 -->
-                <a href = "#overlay_t" class = "triggerMenu"><img src = "./images/main/main-menu.png"></a>
-                <a href="#" class = "triggerPop"><img src = "./images/main/popup-menu.png"></a>
+                <a href = "index.html" class = "home"><img src = "./images/main/XXX-logo.png" class="img-responsive"></a>
             </header>
 
-            <div id="overlay_t">
+            <div id="page">
+                <div id ="page-head">
+                    <ul class = "season">
+                        <span>[2017]F/W</span>
+                        <span>[2018]S/S</span>
+                        <span>[2018]F/W</span>
+                    </ul> 
+                </div>
             </div>
-    
-            <div id="popup_layer">
-                <ul class = "popup_list" type ="none">
-                    <li><a class ="list_select">Login</a></li>
-                    <li><a href = "./shop.html" class ="list_select">Shop</a></li>
-                    <li><a class ="list_select">Order</a></li>                        <li><a class ="list_select">Cart</a></li>
-                    <li><a class ="list_select">Favorite</a></li>
-                </ul>
-            </div>
+
     </body>
         <!-- scripts -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -41,7 +36,7 @@
         <script src="./page-assets/js/skel.min.js"></script>
         <script src="./page-assets/js/util.js"></script>
         <script src="./page-assets/js/main.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
     </body>
