TODO: reset Header settings

--- a/shop.html
+++ b/shop.html
@@ -1,12 +1,14 @@
+<!DOCTYPE html>
+
 <html>
     <head>
         <meta charset = "utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <title> XX_unXpected </title>
-        <link rel="stylesheet" href="./page-assets/css/style.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./page-assets/css/style.css" />
 
         <link rel="SHORTCUT ICON" href="./images/main/XXX-logo.ico" />
         <link rel="icon" href="./images/main/XXX-logo.ico" type="image/ico" />
@@ -26,8 +28,7 @@
                     </ul> 
                 </div>
             </div>
-
-    </body>
+    
         <!-- scripts -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="./page-assets/js/jquery.poptrox.min.js"></script>
