--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <title> XX_unXpected </title>
-        <link rel="stylesheet" href="./page-assets/css/style.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-       
+        <link rel="stylesheet" href="./page-assets/css/style.css" />
+
         <link rel="SHORTCUT ICON" href="./images/main/XXX-logo.ico" />
 	    <link rel="icon" href="./images/main/XXX-logo.ico" type="image/ico" />
     </head>
@@ -21,21 +21,21 @@
             <a href = "index.html" class="home"><img src = "./images/main/XXX-logo.png" class="img-responsive"></a>
 
             <!-- 우측 상단 팝업 메뉴 -->
-            <a href = "#overlay_t" class = "triggerMenu"><img src = "./images/main/main-menu.png" class="img-responsive"></a>
-            <a href="#" class = "triggerPop"><img src = "./images/main/popup-menu.png" class="img-responsive"></a>
+            <a href = "#overlay_t" class = "triggerMenu"><img src = "./images/main/main-menu.png"></a>
+            <a href="#" class = "triggerPop"><img src = "./images/main/popup-menu.png"></a>
         </header>
 
         <div id ="page"> 
             <div class= "container">
                 <div id = "XXX_image" class = "main style1 dark fullscreen">
-                        <img src = "./images/main/main-img.jpeg" class="main-img img-responsive">
+                        <img src = "./images/main/main-img.jpeg" class="img-responsive">
                 </div>
             </div>
 
             <div id="overlay_t">
             </div>
 
-            <div id="popup_layer" class="container">
+            <div id="popup_layer">
                 <ul class = "popup_list" type ="none">
                     <li><a class ="list_select">Login</a></li>
                     <li><a href = "./shop.html" class ="list_select">Shop</a></li>
@@ -55,7 +55,7 @@
             </div>
 
             <!-- footer -->
-            <footer id="footer" class="container-fluid">                
+            <footer id="footer">                
                 <nav class="copyright">
                     <ul>
                         <li>Copyright&copy; XXX All rights Reserved.</li>
