add scrolly(sticky header)

--- a/index.html
+++ b/index.html
@@ -16,52 +16,65 @@
 
     <!-- body -->
     <body>
-        <header id = "header">
+        <div class="header" id ="XXXheader">
             <!-- 홈 로고 설정 -->
             <a href = "index.html" class="home"><img src = "./images/main/XXX-logo.png" class="img-responsive"></a>
 
             <!-- 우측 상단 팝업 메뉴 -->
             <a href = "#overlay_t" class = "triggerMenu"><img src = "./images/main/main-menu.png"></a>
             <a href="#" class = "triggerPop"><img src = "./images/main/popup-menu.png"></a>
-        </header>
+        </div>
 
-        <div id ="page"> 
+        <div class ="page">
             <div class= "container">
-                <div id = "XXX_image" class = "main style1 dark fullscreen">
+                <div id = "XXX_image" class ="main style1 dark fullscreen">
                         <img src = "./images/main/main-img.jpeg" class="img-responsive">
                 </div>
+            </div>
+
+            
+
+            <div id="popup_layer">
+                <ul class = "popup_list" type ="none">
+                    <li><a>Login</a></li>
+                    <li><a href = "./shop.html">Shop</a></li>
+                    <li><a>Order</a></li>
+                    <li><a>Cart</a></li>
+                    <li><a>Favorite</a></li>
+                </ul>
             </div>
 
             <div id="overlay_t">
             </div>
 
-            <div id="popup_layer">
-                <ul class = "popup_list" type ="none">
-                    <li><a class ="list_select">Login</a></li>
-                    <li><a href = "./shop.html" class ="list_select">Shop</a></li>
-                    <li><a class ="list_select">Order</a></li>
-                    <li><a class ="list_select">Cart</a></li>
-                    <li><a class ="list_select">Favorite</a></li>
-                </ul>
-            </div>
+            <p>The header will stick to the top when you reach its scroll position.</p>
+                    <p>Scroll back up to remove the sticky effect.</p>
+                    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p><p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p><p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p><p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p><p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
 
             <div id="contact-icons">
                 <!-- 하단 링크 설정 -->
-                <ul id="float-icons" class="contact">
-                    <span><i class="fa fa-facebook-official" aria-hidden="true"></i><a class = "contactlink" href = "https://ko-kr.facebook.com/people/%EB%94%98%EB%94%98%EC%9D%B4/100004035184267"> Facebook</a></span>
-                    <span><i class="fa fa-instagram" aria-hidden="true"></i><a class = "contactlink" href = "#"> Instagram</a></span>
-                    <span><i class="fa fa-envelope-o" aria-hidden="true"></i><a class = "contactlink" href = "#"> E-mail</a></span>
+                <ul id="float-icons">
+                    <span><i class="fa fa-facebook-official" aria-hidden="true"></i><a href = "https://ko-kr.facebook.com/people/%EB%94%98%EB%94%98%EC%9D%B4/100004035184267"> Facebook</a></span>
+                    <span><i class="fa fa-instagram" aria-hidden="true"></i><a href = "#"> Instagram</a></span>
+                    <span><i class="fa fa-envelope-o" aria-hidden="true"></i><a href = "#"> E-mail</a></span>
                 </ul>
             </div>
 
             <!-- footer -->
-            <footer id="footer">                
+            <div id="footer">                
                 <nav class="copyright">
                     <ul>
                         <li>Copyright&copy; XXX All rights Reserved.</li>
                     </ul>
                 </nav>
-            </footer>
+            </div>
         </div>
 
         <!-- scripts -->
