--- a/shop.html
+++ b/shop.html
@@ -14,13 +14,13 @@
         <link rel="icon" href="./images/main/XXX-logo.ico" type="image/ico" />
     </head>
     <body>
-            <header id = "header">
+            <div class = "header" id= "shop-header">
                 <!-- 홈 로고 설정 -->
                 <a href = "index.html" class = "home"><img src = "./images/main/XXX-logo.png" class="img-responsive"></a>
-            </header>
+            </div>
 
-            <div id="page">
-                <div id ="page-head">
+            <div class="page">
+                <div class ="page-shop">
                     <ul class = "season">
                         <span>[2017]F/W</span>
                         <span>[2018]S/S</span>
