--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <ul id="float-icons">
                     <span><i class="fa fa-facebook-official" aria-hidden="true"></i><a href = "https://ko-kr.facebook.com/people/%EB%94%98%EB%94%98%EC%9D%B4/100004035184267"> Facebook</a></span>
                     <span><i class="fa fa-instagram" aria-hidden="true"></i><a href = "#"> Instagram</a></span>
-                    <span><i class="fa fa-envelope-o" aria-hidden="true"></i><a href = "#"> E-mail</a></span>
+                    <span><i class="fa fa-envelope-o" aria-hidden="true"></i><a href = "mailto:minuk8932@naver.com"> E-mail</a></span>
                 </ul>
             </div>
 
