--- a/shop.html
+++ b/shop.html
@@ -20,10 +20,8 @@
 
                 <div class="page">
                     <div class ="page-shop">
-                        <ul class = "season">
-                            <span>[2017]F/W</span>
-                            <span>[2018]S/S</span>
-                            <span>[2018]F/W</span>
+                        <ul class = "season" type="none">
+                            <li>Season</li>
                         </ul> 
                     </div>
                 </div>
