--- a/shop.html
+++ b/shop.html
@@ -18,11 +18,12 @@
                 <!-- 홈 로고 설정 -->
                 <a href = "index.html" class = "home"><img src = "./images/main/XXX-logo.png" class="img-responsive"></a>
 
-                <div class="page">
-                    <div class ="page-shop">
-                        <ul class = "season" type="none">
-                            <li>Season</li>
-                        </ul> 
+                <div class ="season">                        
+                    <button class="dropbtn">Seasons</button>
+                    <div class="dropdown-season">
+                        <a href="#">Last</a>
+                        <a href="#">2018 S/S</a>
+                        <a href="#">2018 F/W</a>
                     </div>
                 </div>
             </div>
