reset season dropdown btn(hover)

--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
                 <!-- 홈 로고 설정 -->
                 <a href = "index.html" class = "home"><img src = "./images/main/XXX-logo.png" class="img-responsive"></a>
 
-                <div class ="season">                        
+                <div class ="season" style="float: right">                        
                     <button class="dropbtn">Seasons</button>
                     <div class="dropdown-season">
                         <a href="#">Last</a>
