--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class ="XXX-info">
                 <ul type="none">
                     <li class="about">About XXX</li>
-                    <li class="about-content">XXX - CEO: Su-jin Shin</li>
+                    <li class="about-content">XXX - CEO: Soo-jin Shin</li>
                     <li class="about-content">202-404, Hanam-Daero 802-55, Hanam, Gyeonggi-do, South Korea, 12949</li>
                     <li class="about-content">CORPORATE REGISTRATION NUMBER: </li>
                     <li class="about-content">TELECOMMUNICATION CARRIER NUMBER: </li>
@@ -66,7 +66,7 @@
                 <ul id="float-icons">
                     <span><i class="fa fa-facebook-official" aria-hidden="true"></i><a href = "https://ko-kr.facebook.com/people/%EB%94%98%EB%94%98%EC%9D%B4/100004035184267"> Facebook</a></span>
                     <span><i class="fa fa-instagram" aria-hidden="true"></i><a href = "#"> Instagram</a></span>
-                    <span><i class="fa fa-envelope-o" aria-hidden="true"></i><a href = "mailto:minuk8932@naver.com"> E-mail</a></span>
+                    <span><i class="fa fa-envelope-o" aria-hidden="true"></i><a href = "mailto:shinsu94@naver.com"> E-mail</a></span>
                 </ul>
             </div>
 
