reset first dropbtn

--- a/shop.html
+++ b/shop.html
@@ -37,7 +37,7 @@
                                     <div class="img-dropbtn">
                                         <img src="./images/shop/clothes.jpeg" class="img-responsive">
                                         
-                                        <div class="img-dropbtn-content">
+                                        <div class="img-dropbtn-content first-dropbtn">
                                                 <img src="./images/shop/clothes.jpeg" class="img-responsive">
                                                 <div class="desc"> product code(001122) </p></div>
                                         </div>
