add dropbtn img event

--- a/shop.html
+++ b/shop.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <div class="shop-items">
+            <div id="shop-items">
                 <ul class="item-tables" type="none">
                     <li>
                         <table>
