setting login page

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 
             <div id="popup_layer">
                 <ul class = "popup_list" type ="none">
-                    <li><a>Login</a></li>
+                    <li><a href="./login.html">Login</a></li>
+                    <!-- AJAX 처리 필요 -->
                     <li><a href = "./shop.html">Shop</a></li>
                     <li><a>Order</a></li>
                     <li><a>Cart</a></li>
-                    <li><a>Favorite</a></li>
+                    <li><a>Lookbook</a></li>
                 </ul>
             </div>
 
@@ -52,12 +53,13 @@
                 <ul type="none">
                     <li class="about">About XXX</li>
                     <li class="about-content">XXX - CEO: Soo-jin Shin</li>
+                    <li class="about-content">ADMIN: Su-jin Shin</li>
                     <li class="about-content">202-404, Hanam-Daero 802-55, Hanam, Gyeonggi-do, South Korea, 12949</li>
+                    <li class="about-content">Tel. 010-0000-0000</li>
+                    
+                    <li class="about-content" id="license">License</li>
                     <li class="about-content">CORPORATE REGISTRATION NUMBER: </li>
                     <li class="about-content">TELECOMMUNICATION CARRIER NUMBER: </li>
-                    <li class="about-content">ADMIN: Su-jin Shin</li>
-                    <li class="about-content">Host Service: Amazon Web Services</li>
-                    <li class="about-content">Tel. 010-0000-0000</li>
                 </ul>
             </div>
 
