--- a/shop.html
+++ b/shop.html
@@ -22,8 +22,8 @@
                     <button class="dropbtn">Seasons</button>
                     <div class="dropdown-season">
                         <a href="#">Last</a>
-                        <a href="#">2018 S/S</a>
-                        <a href="#">2018 F/W</a>
+                        <a href="#" class="now-season">yyyy S/S</a>
+                        <a href="#" class="now-season">yyyy F/W</a>
                     </div>
                 </div>
             </div>
