setting whole structure

--- a/login.html
+++ b/login.html
@@ -22,7 +22,33 @@
         </div>
 
         <div class ="page">
-            
+            <div>
+                <form action="" id="login-form">
+                    <table class="login">
+                            <tr>
+                                <td><span class="login-title">User ID:</span></td>
+                                <td rowspan="4"><input type="submit" value="Login"></td>
+                            </tr>
+                            <tr>
+                                <td><input type="text" name="userid" class="login-text"></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <br>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><span class="login-title">User password:</span></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td><input type="password" name="psw" class="login-text"></td>
+                                <td></td>
+                            </tr>
+                    </table>
+                </form>
+            </div>
         </div>
 
         <!-- scripts -->
