add login page(finish:reset)

--- a/login.html
+++ b/login.html
@@ -46,8 +46,18 @@
                                 <td><input type="password" name="psw" class="login-text"></td>
                                 <td></td>
                             </tr>
-                    </table>
+                    </table>                             
                 </form>
+                <div id="set-id">
+                    <ul class="find-create" type="none">
+                        <li>
+                            <a href="#">Sign up</a>
+                        </li>
+                        <li>
+                            <a href="#">lost your ID/PW ?</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
