reset login page

--- a/login.html
+++ b/login.html
@@ -26,24 +26,24 @@
                 <form action="" id="login-form">
                     <table class="login">
                             <tr>
-                                <td><span class="login-title">User ID:</span></td>
+                                <td><br></td>
                                 <td rowspan="5"><div class="login-submit"><a><input type="image" src="./images/login/login-ico.png" alt="Submit" value="Login" class="submitbtn"></a></div></td>
                             </tr>
                             <tr>
-                                <td><input type="text" name="userid" class="login-text"></td>
+                                <td><input type="text" name="userid" placeholder="User-ID" class="login-text"></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td colspan="2">
-                                    <br>
+                                    
                                 </td>
                             </tr>
                             <tr>
-                                <td><span class="login-title">User password:</span></td>
+                                <td></td>
                                 <td></td>
                             </tr>
                             <tr>
-                                <td><input type="password" name="psw" class="login-text"></td>
+                                <td><input type="password" name="psw" placeholder="User-PW" class="login-text"></td>
                                 <td></td>
                             </tr>
                     </table>                             
@@ -54,7 +54,7 @@
                             <a href="#">Sign up</a>
                         </li>
                         <li>
-                            <a href="#">lost your ID/PW ?</a>
+                            <a href="#">forgot your ID/PW ?</a>
                         </li>
                     </ul>
                 </div>
