reset season's year format

--- a/shop.html
+++ b/shop.html
@@ -22,8 +22,8 @@
                     <button class="dropbtn">Seasons</button>
                     <div class="dropdown-season">
                         <a href="#">Last</a>
-                        <a href="#" class="now-season">yyyy S/S</a>
-                        <a href="#" class="now-season">yyyy F/W</a>
+                        <a href="#" id="now-season1"></a>
+                        <a href="#" id="now-season2"></a>
                     </div>
                 </div>
             </div>
